[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/player/character_0000.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/player/character_0001.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 9 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 7 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 11.0
height = 10.0

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;
//2d 쉐이더라는 뜻이다.

uniform vec4 baseColor : hint_color;  //고도 엔진 인스펙터에 표시 시켜줌 

//fragment 함수는 각각의 픽셀이 어떤 컬러로 보여줄 것인지를 결정하는 것.
void fragment() {
	vec4 texColor = texture(TEXTURE, UV); // UV와 TEXTURE에 맞는 현재 픽셀 컬러를 가져온다.
	COLOR.rgba = vec4(baseColor.r, baseColor.g, baseColor.b, texColor.a);
}
"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/baseColor = Color( 0.352941, 0.823529, 0.54902, 1 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.297753, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.960674, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 10 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 0
script = ExtResource( 2 )
dashHazardMask = 262144

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2( 0, -11 )
shape = SubResource( 3 )

[node name="AnimatedPlayerSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9 )
shape = SubResource( 1 )

[node name="HazardArea2D" type="Area2D" parent="."]
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 327680

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea2D"]
shape = SubResource( 4 )

[node name="DashArea2D" type="Area2D" parent="."]
position = Vector2( 0, -10 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashArea2D"]
rotation = -1.5708
shape = SubResource( 5 )
disabled = true

[node name="DashParticles" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.533333 )
show_behind_parent = true
material = SubResource( 7 )
position = Vector2( 0, -12 )
amount = 15
lifetime = 0.4
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 1 )
